[package]
name = "ism2"
version = "0.1.0"
authors = ["MarimeGui <lepro.guillaume@gmail.com>"]
edition = "2018"

[dependencies]
half = "1.1.2"
ez_io = { git = "https://github.com/MarimeGui/ez_io.git" }
clap = "2.31.2"
my_gltf = { git = "https://github.com/MarimeGui/my_gltf.git" }
tid = { git = "https://github.com/MarimeGui/tid.git" }
rgb = "0.8.11"
png = "0.12.0"